# AnalyticalService

./: .env.example  .gitignore  BRANCHING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/api/: main.py  router.py  schemas.py  service.py
src/bot/: api_client.py  formatters.py  handlers.py  keyboards.py  main.py
src/collector/: main.py  moex_client.py  repository.py
src/core/: __init__.py  config.py  logging.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: d301ddf5306f_initial_tables.py
src/db/models/: base.py  bond.py  payment.py  user.py  user_filter.py
