[project]
name = "bond-screener"
version = "0.1.0"
description = "Bond screening platform with MOEX ISS API"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    # MOEX API
    "aiomoex>=2.1",
    "aiohttp>=3.9",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Redis
    "redis[hiredis]>=5.0",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # Bot
    "aiogram>=3.4",
    # Utils
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
